# mission-control

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  gunicorn.conf.py  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_task_updates_fields.py  0004_mailbox_tables.py  (+15 more)
apps/api/app/: anthropic_provider.py  call_action_extraction.py  canon_context.py  chunking.py  config.py  daily_rollup.py  deps.py  logging_setup.py  mail_email_extraction.py  main.py  middleware.py  models.py  providers.py  repositories.py  request_context.py  schemas.py  security.py  services.py  source_extraction.py  task_candidate_extraction.py
apps/api/scripts/: seed_all.sh  seed_poc_data.sh  seed_sample_tasks.sh  seed_sources.sh
apps/api/tests/: conftest.py  test_audit.py  test_call_artifacts.py  test_canon_change.py  test_canon_routes.py  test_cors.py  test_daily_review_metrics_routes.py  test_feature_flags.py  test_integration_flows.py  test_logging_setup.py  test_mail_routes.py  test_mail_task_candidates.py  test_mailbox_graph_stub.py  test_recommendation_modes.py  test_retrieval_recommendation_routes.py  test_rollup_daily.py  test_schema_models.py  test_search.py  test_source_extraction.py  test_source_pipeline.py  test_sources_routes.py  test_subtasks_and_obstacles.py  test_system_routes.py  test_task_candidates_routes.py  test_task_extraction.py  test_task_flows_routes.py  test_tasks_routes.py  test_transcription.py  test_week3_integration.py
(+107 files in other folders)
